--- a/index.html
+++ b/index.html
@@ -6,7 +6,44 @@
     <link rel="stylesheet" href="src/assets/stylesheets/base.css">
 </head>
 <body>
-<h2 class="test">new</h2>
+<header class="header">
+    <a href="#" class="header__logo"><img src="./src/assets/images/logo.png" alt="Logo" class="header__logo__image"></a>
+    <ul class="header_nav">
+        <li class="header__nav__items"><a class="header_nav__items__links" href="#">Our Story</a></li>
+        <li class="header__nav__items"><a class="header_nav__items__links" href="#">Menu</a></li>
+        <li class="header__nav__items"><a class="header_nav__items__links" href="#">Reservations</a></li>
+        <li class="header__nav__items"><a class="header_nav__items__links" href="#">News</a></li>
+        <li class="header__nav__items"><a class="header_nav__items__links" href="#">Rviews</a></li>
+    </ul>
+</header>
+<main>
+
+    <div class="main_block">
+        <div class="main_block__text-block">
+            <h1 class="main_block__text-block__title">This Template Is Awesome</h1>
+            <p class="main_block__text-block__text">
+                <span class="main_block__text-block__img-line"><img src="./src/assets/images/line.png" alt="line"></span>
+                resto restaurant home page website template
+                <span class="main_block__text-block__img-line"><img src="./src/assets/images/line.png" alt="line"></span>
+            </p>
+        </div>
+    </div>
+
+    <div class="menu">
+        <div class="menu__b-title">
+            <p class="menu__b-title__title">The Menu</p>
+        </div>
+        <div class="menu__b-flex">
+            <div class="menu__b-flex__b-right">
+                ul>li.menu__b-flex__table_props*4>p.menu__b-flex__table_props__text{test}>span.menu__b-flex__table_props__row__undertext+img.[src="./src/assets/images/line-2.png"]+span.menu__b-flex__table_props__row__money
+            </div>
+            <div class="menu__b-flex__b-left">
+                ul>li.menu__b-flex__table_props*4>p.menu__b-flex__table_props__text{test}>span.menu__b-flex__table_props__row__undertext+img.[src="./src/assets/images/line-2.png"]+span.menu__b-flex__table_props__row__money
+            </div>
+        </div>
+    </div>
+
+</main>
 <script src="src/assets/javascript/main.js"></script>
 </body>
 </html>
