--- a/index.html
+++ b/index.html
@@ -35,12 +35,146 @@
         </div>
         <div class="menu__b-flex">
             <div class="menu__b-flex__b-right">
-                ul>li.menu__b-flex__table_props*4>p.menu__b-flex__table_props__text{test}>span.menu__b-flex__table_props__row__undertext+img.[src="./src/assets/images/line-2.png"]+span.menu__b-flex__table_props__row__money
+                <ul>
+                    <li class="menu__b-flex__table_props">
+                        <p class="menu__b-flex__table_props__row">Voluptate cillum fugiat.
+                           <img src="./src/assets/images/line-2.png" alt="line" class="menu__b-flex__table_props__row__image">
+                            <span class="menu__b-flex__table_props__row__money">$50</span>
+                        </p>
+                        <span class="menu__b-flex__table_props__undertext">Cheese, tomato, mushrooms, onions.</span>
+                    </li>
+
+                    <li class="menu__b-flex__table_props">
+                        <p class="menu__b-flex__table_props__row">Metus varius laoreet.
+                            <img src="./src/assets/images/line-2.png" alt="line" class="menu__b-flex__table_props__row__image">
+                            <span class="menu__b-flex__table_props__row__money">$62</span>
+                        </p>
+                        <span class="menu__b-flex__table_props__undertext">Chicken, mozzarella cheese, onions.</span>
+                    </li>
+
+                    <li class="menu__b-flex__table_props">
+                        <p class="menu__b-flex__table_props__row">Donec sodales magna.
+                            <img src="./src/assets/images/line-2.png" alt="line" class="menu__b-flex__table_props__row__image">
+                            <span class="menu__b-flex__table_props__row__money">$25</span>
+                        </p>
+                        <span class="menu__b-flex__table_props__undertext">Tuna, Sweetcorn, Cheese.</span>
+                    </li>
+
+                    <li class="menu__b-flex__table_props">
+                        <p class="menu__b-flex__table_props__row">Saugue velit cursus.
+                           <img src="./src/assets/images/line-2.png" alt="line" class="menu__b-flex__table_props__row__image">
+                            <span class="menu__b-flex__table_props__row__money">$30</span>
+                        </p>
+                        <span class="menu__b-flex__table_props__undertext">Pineapple, Minced Beef, Cheese.</span>
+                    </li>
+                    <li class="menu__b-flex__table_props first-hidden" style="display: none">
+                        <p class="menu__b-flex__table_props__row">Poeli edi vkoosnoi.
+                            <img src="./src/assets/images/line-2.png" alt="line" class="menu__b-flex__table_props__row__image">
+                            <span class="menu__b-flex__table_props__row__money">$35</span>
+                        </p>
+                        <span class="menu__b-flex__table_props__undertext">Chicken, mozzarella cheese, onions.</span>
+                    </li>
+                </ul>
             </div>
+
             <div class="menu__b-flex__b-left">
-                ul>li.menu__b-flex__table_props*4>p.menu__b-flex__table_props__text{test}>span.menu__b-flex__table_props__row__undertext+img.[src="./src/assets/images/line-2.png"]+span.menu__b-flex__table_props__row__money
+                <ul>
+                    <li class="menu__b-flex__table_props">
+                        <p class="menu__b-flex__table_props__row">Arcu pede enim justo.
+                            <img src="./src/assets/images/line-2.png" alt="line" class="menu__b-flex__table_props__row__image">
+                            <span class="menu__b-flex__table_props__row__money">$45</span>
+                        </p>
+                        <span class="menu__b-flex__table_props__undertext">Tuna, Sweetcorn, Cheese.</span>
+                    </li>
+
+                    <li class="menu__b-flex__table_props">
+                        <p class="menu__b-flex__table_props__row">Cras dapibussemper nisi.
+                            <img src="./src/assets/images/line-2.png" alt="line" class="menu__b-flex__table_props__row__image">
+                            <span class="menu__b-flex__table_props__row__money">$32</span>
+                        </p>
+                        <span class="menu__b-flex__table_props__undertext">Pineapple, Minced Beef, Cheese.</span>
+                    </li>
+
+                    <li class="menu__b-flex__table_props">
+                        <p class="menu__b-flex__table_props__row">Quam semper libero.
+                            <img src="./src/assets/images/line-2.png" alt="line" class="menu__b-flex__table_props__row__image">
+                            <span class="menu__b-flex__table_props__row__money">$15</span>
+                        </p>
+                        <span class="menu__b-flex__table_props__undertext">Tuna, Sweetcorn, Cheese.</span>
+                    </li>
+
+                    <li class="menu__b-flex__table_props">
+                        <p class="menu__b-flex__table_props__row">Nam eget dui Etiam.
+                            <img src="./src/assets/images/line-2.png" alt="line" class="menu__b-flex__table_props__row__image">
+                            <span class="menu__b-flex__table_props__row__money">$35</span>
+                        </p>
+                        <span class="menu__b-flex__table_props__undertext">Chicken, mozzarella cheese, onions.</span>
+                    </li>
+
+                    <li class="menu__b-flex__table_props second-hidden" style="display: none">
+                        <p class="menu__b-flex__table_props__row">Edim edu.
+                            <img src="./src/assets/images/line-2.png" alt="line" class="menu__b-flex__table_props__row__image">
+                            <span class="menu__b-flex__table_props__row__money">$125</span>
+                        </p>
+                        <span class="menu__b-flex__table_props__undertext">Chicken, mozzarella cheese, onions.</span>
+                    </li>
+                </ul>
             </div>
         </div>
+        <div class="menu__toggle-btn">
+            <button class="menu__toggle-btn__btn-props" id="test" >load more
+                <span><img src="./src/assets/images/shape-16.png" alt="line">
+                </span>
+                <span><img src="./src/assets/images/shape-14.png" alt="line"></span>
+            </button>
+        </div>
+    </div>
+    <div class="gallery">
+        <div class="gallery__header">
+            <h3 class="gallery__header__title">Featured Dishes</h3>
+            <ul>
+                <li class="gallery__header__btn-list">
+                        <button class="gallery__header__btn-list__btn"><img src="./src/assets/images/shape-4.png" alt="btn"></button>
+                </li>
+                <li class="gallery__header__btn-list">
+                        <button class="gallery__header__btn-list__btn"><img src="./src/assets/images/shape-4.png" alt="btn"></button>
+                </li>
+            </ul>
+        </div>
+
+        <div class="gallery__carousel" id="carousel">
+            <ul class="gallery__carousel__gallery">
+                <li class="gallery__carousel__gallery__list">
+                    <img src="./src/assets/images/food-1.png" alt="food" class="gallery__carousel__gallery__list__image">
+                    <p class="gallery__carousel__gallery__list__text">Fugiat nulla sint
+                       <span class="gallery__carousel__gallery__list__text__money">$30</span>
+                    </p>
+                    <img src="./src/assets/images/rating-1.png" alt="stars" class="gallery__carousel__gallery__list__stars">
+                </li>
+                <li class="gallery__carousel__gallery__list">
+                    <img src="./src/assets/images/food-2.png" alt="food" class="gallery__carousel__gallery__list__image">
+                    <p class="gallery__carousel__gallery__list__text">Daute irure dolor
+                        <span class="gallery__carousel__gallery__list__text__money">$24</span>
+                    </p>
+                    <img src="./src/assets/images/rating-2.png" alt="stars" class="gallery__carousel__gallery__list__stars">
+                </li>
+                <li class="gallery__carousel__gallery__list">
+                    <img src="./src/assets/images/food-3.png" alt="food" class="gallery__carousel__gallery__list__image">
+                    <p class="gallery__carousel__gallery__list__text">Officia deserunt mollit
+                       <span class="gallery__carousel__gallery__list__text__money">$60</span>
+                    </p>
+                    <img src="./src/assets/images/rating-3.png" alt="stars" class="gallery__carousel__gallery__list__stars">
+                </li>
+                <li class="gallery__carousel__gallery__list">
+                    <img src="./src/assets/images/food-4.png" alt="food" class="gallery__carousel__gallery__list__image">
+                    <p class="gallery__carousel__gallery__list__text">Pim minim veniam
+                        <span class="gallery__carousel__gallery__list__text__money">$17</span>
+                    </p>
+                    <img src="./src/assets/images/raiting-4.png" alt="stars" class="gallery__carousel__gallery__list__stars">
+                </li>
+            </ul>
+        </div>
+
     </div>
 
 </main>
