--- a/index.html
+++ b/index.html
@@ -129,55 +129,103 @@
             </button>
         </div>
     </div>
+    <div class="dishes">
+        <h3 class="dishes__title">Featured Dishes</h3>
+            <!--<ul>-->
+                <!--<li class="gallery__header__btn-list">-->
+                        <!--<button class="gallery__header__btn-list__btn"><img src="./src/assets/images/shape-4.png" alt="btn"></button>-->
+                <!--</li>-->
+                <!--<li class="gallery__header__btn-list">-->
+                        <!--<button class="gallery__header__btn-list__btn"><img src="./src/assets/images/shape-4.png" alt="btn"></button>-->
+                <!--</li>-->
+                <!--<li class="gallery__header__btn-list">-->
+                    <!--<button class="gallery__header__btn-list__btn"><img src="./src/assets/images/shape-4.png" alt="btn"></button>-->
+                <!--</li>-->
+                <!--<li class="gallery__header__btn-list">-->
+                    <!--<button class="gallery__header__btn-list__btn"><img src="./src/assets/images/shape-4.png" alt="btn"></button>-->
+                <!--</li>-->
+            <!--</ul>-->
+        <div class="dishes__carousel" id="carousel">
+            <ul class="dishes__carousel__gallery">
+                <li class="dishes__carousel__gallery__list">
+                    <img src="./src/assets/images/food-1.png" alt="food" class="dishes__carousel__gallery__list__image">
+                    <p class="dishes__carousel__gallery__list__text">Fugiat nulla sint
+                       <span class="dishes__carousel__gallery__list__text__money">$30</span>
+                    </p>
+                    <img src="./src/assets/images/rating-1.png" alt="stars" class="dishes__carousel__gallery__list__stars">
+                </li>
+                <li class="dishes__carousel__gallery__list">
+                    <img src="./src/assets/images/food-2.png" alt="food" class="dishes__carousel__gallery__list__image">
+                    <p class="dishes__carousel__gallery__list__text">Daute irure dolor
+                        <span class="dishes__carousel__gallery__list__text__money">$24</span>
+                    </p>
+                    <img src="./src/assets/images/rating-2.png" alt="stars" class="dishes__carousel__gallery__list__stars">
+                </li>
+                <li class="dishes__carousel__gallery__list">
+                    <img src="./src/assets/images/food-3.png" alt="food" class="dishes__carousel__gallery__list__image">
+                    <p class="dishes__carousel__gallery__list__text">Officia deserunt
+                       <span class="dishes__carousel__gallery__list__text__money">$60</span>
+                    </p>
+                    <img src="./src/assets/images/rating-3.png" alt="stars" class="dishes__carousel__gallery__list__stars">
+                </li>
+                <li class="dishes__carousel__gallery__list">
+                    <img src="./src/assets/images/food-4.png" alt="food" class="dishes__carousel__gallery__list__image">
+                    <p class="dishes__carousel__gallery__list__text">Pim minim veniam
+                        <span class="dishes__carousel__gallery__list__text__money">$17</span>
+                    </p>
+                    <img src="./src/assets/images/raiting-4.png" alt="stars" class="dishes__carousel__gallery__list__stars">
+                </li>
+            </ul>
+        </div>
+    </div>
+
     <div class="gallery">
-        <div class="gallery__header">
-            <h3 class="gallery__header__title">Featured Dishes</h3>
-            <ul>
-                <li class="gallery__header__btn-list">
-                        <button class="gallery__header__btn-list__btn"><img src="./src/assets/images/shape-4.png" alt="btn"></button>
-                </li>
-                <li class="gallery__header__btn-list">
-                        <button class="gallery__header__btn-list__btn"><img src="./src/assets/images/shape-4.png" alt="btn"></button>
-                </li>
-            </ul>
+        <h3 class="gallery__title">The gallery</h3>
+        <div class="gallery__flex-block">
+            <div class="gallery__full-image"><img src="./src/assets/images/g-1.png" alt="photo">
+            </div>
+            <div class="gallery__half-image">
+                <img src="./src/assets/images/g-2.1.png" alt="photo"><br>
+                <img src="./src/assets/images/g-2.2.png" alt="photo" class="gallery__half-image__second-image">
+            </div>
+            <div class="gallery__half-image">
+                <img src="./src/assets/images/g-3.1.png" alt="photo" ><br>
+                <img src="./src/assets/images/g-3.2.png" alt="photo" class="gallery__half-image__second-image"></div>
         </div>
-
-        <div class="gallery__carousel" id="carousel">
-            <ul class="gallery__carousel__gallery">
-                <li class="gallery__carousel__gallery__list">
-                    <img src="./src/assets/images/food-1.png" alt="food" class="gallery__carousel__gallery__list__image">
-                    <p class="gallery__carousel__gallery__list__text">Fugiat nulla sint
-                       <span class="gallery__carousel__gallery__list__text__money">$30</span>
-                    </p>
-                    <img src="./src/assets/images/rating-1.png" alt="stars" class="gallery__carousel__gallery__list__stars">
-                </li>
-                <li class="gallery__carousel__gallery__list">
-                    <img src="./src/assets/images/food-2.png" alt="food" class="gallery__carousel__gallery__list__image">
-                    <p class="gallery__carousel__gallery__list__text">Daute irure dolor
-                        <span class="gallery__carousel__gallery__list__text__money">$24</span>
-                    </p>
-                    <img src="./src/assets/images/rating-2.png" alt="stars" class="gallery__carousel__gallery__list__stars">
-                </li>
-                <li class="gallery__carousel__gallery__list">
-                    <img src="./src/assets/images/food-3.png" alt="food" class="gallery__carousel__gallery__list__image">
-                    <p class="gallery__carousel__gallery__list__text">Officia deserunt mollit
-                       <span class="gallery__carousel__gallery__list__text__money">$60</span>
-                    </p>
-                    <img src="./src/assets/images/rating-3.png" alt="stars" class="gallery__carousel__gallery__list__stars">
-                </li>
-                <li class="gallery__carousel__gallery__list">
-                    <img src="./src/assets/images/food-4.png" alt="food" class="gallery__carousel__gallery__list__image">
-                    <p class="gallery__carousel__gallery__list__text">Pim minim veniam
-                        <span class="gallery__carousel__gallery__list__text__money">$17</span>
-                    </p>
-                    <img src="./src/assets/images/raiting-4.png" alt="stars" class="gallery__carousel__gallery__list__stars">
-                </li>
-            </ul>
-        </div>
-
     </div>
 
 </main>
+
+<footer>
+    <div class="b-footer">
+        <ul class="b-footer__nav">
+            <li class="b-footer__nav__items">New York Restaurant</li>
+            <li class="b-footer__nav__items">3926 Anmoore Road</li>
+            <li class="b-footer__nav__items"> New York, NY 10014</li>
+            <li class="b-footer__nav__items">718-749-1714</li>
+        </ul>
+        <ul class="b-footer__nav">
+            <li class="b-footer__nav__items">France Restaurant</li>
+            <li class="b-footer__nav__items">68, rue  de la Couronne</li>
+            <li class="b-footer__nav__items">75002 PARIS</li>
+            <li class="b-footer__nav__items">02.94.23.69.56</li>
+        </ul>
+        <ul class="b-footer__nav">
+            <li class="b-footer__nav__items">Blog</li>
+            <li class="b-footer__nav__items">Careers</li>
+            <li class="b-footer__nav__items"> Privacy Policy</li>
+            <li class="b-footer__nav__items"> Contact</li>
+        </ul>
+        <ul class="b-footer__nav">
+            <li class="b-footer__nav__items">
+                <a href="#" class="b-footer__logo"><img src="./src/assets/images/footer-logo.png" alt="Logo" class="header__logo__image"></a>
+            </li>
+            <li class="b-footer__nav__items">© All Rights Reserved 2014.</li>
+            <li class="b-footer__nav__items">© Find  More at Pixelhint.com</li>
+        </ul>
+    </div>
+
+</footer>
 <script src="src/assets/javascript/main.js"></script>
 </body>
 </html>
